# Dkash47GranularSynth

./: .gitattributes  CMakeLists.txt  CPU_OPTIMIZATION_IMPROVEMENTS.md  GranularEngine.cpp  PERFORMANCE_OPTIMIZATIONS.md  PluginEditor.cpp  PluginEditor.h  README.md  UI_RESTORATION_COMPLETE.md
Source/: GranularEngine.h  ParameterIDs.h  PluginProcessor.cpp  PluginProcessor.h
